3.0
-Added "Quick Remove DD" feature
-Added "Remove High Density Statuses" option
-Added "Open Containing Folder" context menu item
-Fixed a minor bug with crowd event placement checking
-Fixed the tab order in the configuration window
-Fixed a null reference exception in the chord slide handshape length fix
-Fixed an off-by-one error in the FIXOPEN chord processor
-Fixed a false positive in the bend value mismatch check
-Change the internal representation of time codes to use integers instead of floating point numbers
-Changed where the program settings and logs are stored for better cross-platform compatibility
-Removed the select DDC executable button from the configuration window
-Minor improvements to the Avalonia UI
-Bring the main window to the front when closing a child window (WPF version)
-Updated Avalonia to version 0.9.10
-Updated .NET Core to version 3.1

2.2
-Added 'so' slideout custom event
-Added linknext chord slide handshape length correction
-Added anchor placeholder note removing
-Added checking for need to reset arrangement ids
-Added XML check for unpitched slide notes with linknext
-Updated Avalonia to 0.8.3
-Migrated the WPF version to run on .NET Core 3

2.1
-Added 'overwrite original file' option
-Anchor position chord fingering uses handshapes and produces less false positives
-Moved unnecessary NG phrase deletion before one level fix
-Added crowd event correction (E0 -> e0 etc)
-Added anchor placement checking
-Updated to DDC 3.6
-Removed first phrase/beat moving workarounds
-Updated Avalonia to 0.7.0 and changed to dotnetcoreapp2.1
-Reverted back to Avalonia 0.6.1
-Changed config implementation
-Added Ctrl+P and F5 shortcuts for 'Process'
-Added shortcut keys to Avalonia version
-Fixed a bug in FixEOFLinkNextChordTechNoteIssue function
-Fixed a bug in intro applause event insertion

2.0
-Accept files with XML file extension in capitals
-Fixed bug in DDC generated muted note detection