@@ -6,8 +6,8 @@
     <Authors>iminashi</Authors>
     <NeutralLanguage>en</NeutralLanguage>
     <Version>3.0.0</Version>
-    <AssemblyVersion>3.0.4.155</AssemblyVersion>
-    <FileVersion>3.0.4.155</FileVersion>
+    <AssemblyVersion>3.0.9.156</AssemblyVersion>
+    <FileVersion>3.0.9.156</FileVersion>
     <Copyright>Copyright © 2020</Copyright>
   </PropertyGroup>
   
