@@ -51,7 +51,7 @@ using System.Windows;
 // You can specify all the values or you can default the Build and Revision Numbers
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("3.0.1.155")]
-[assembly: AssemblyFileVersion("3.0.1.155")]
+[assembly: AssemblyVersion("3.0.8.156")]
+[assembly: AssemblyFileVersion("3.0.8.156")]
 [assembly: NeutralResourcesLanguage("en")]
 
